css/main.css
:root {
  font-family: "Poppins", sans-serif;
  font-size: 1rem;
  font-weight: 300;
  background-color: #272728;
  color: #eceef1;
  margin: 0;

  --primary-color: #272728;
  --highlight-color1: #2ca78c;
}

/* Sidebar Styling */
.sidebar {
  width: 0; /* Sidebar hidden by default */
  height: 100vh;
  background-color: #272728;
  color: #eceef1;
  position: fixed;
  top: 0;
  left: 0;
  overflow-x: hidden;
  transition: 0.3s ease;
  z-index: 1000;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
}

.sidebar img {
  border-left: 2px solid #2ca78c;
  margin-left: 1rem;
  height: 40px;
  padding-bottom: 1rem;
  padding-left: 1rem;
  padding-top: 13px;
}

.sidebar.open {
  width: 100%;
  margin: 0;
  padding: 0;
}

.sidebar a {
  padding: 10px 20px;
  text-decoration: none;
  color: #eceef1;
  font-weight: 500;
  display: block;
  font-size: 1.2rem;
  width: 100%;
  text-align: left;
  border-left: 2px solid #2ca78c;
  margin-left: 1rem;
}

.sidebar a:hover {
  opacity: 0.8;
}

/* Toggle button */
.sidebar-toggle {
  font-size: 40px;
  background-color: transparent;
  border: none;
  color: #2ca78c;
  position: fixed;
  padding: 0;
  margin: 0;
  top: 3px;
  right: 3px;
  z-index: 1002;
  cursor: pointer;
  display: none;
}

.sidebar-toggle:hover {
  color: #1d9e7a;
}

/* General styling */
body {
  font-smooth: always;
  margin: 0;
  overflow-x: hidden;
  height: 100vh;
}

html {
  background: url("../images/bg.jpg") no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

h1 {
  color: var(--primary-color);
}

a {
  color: #eceef1;
  text-decoration: none;
}

a:hover {
  transition: opacity 0.3s ease;
  color: var(--highlight-color1);
}

ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

nav {
  background-color: var(--primary-color);
  color: #eceef1;
}

.navbar {
  display: flex;
  justify-content: space-between;
  padding: 0 15px;
}

.logo {
  display: block;
  padding: 0;
  margin: 5px;
  text-decoration: none;
  width: 116px;
  height: 40px;
}

.logo a {
  display: inline-block; /* or block if you want full width */
  padding: 0;
  margin: 0;
}

.logo:hover {
  transition: opacity 0.3s ease;
  opacity: 0.8;
  cursor: pointer;
}

.menu {
  display: flex;
  align-items: center;
  justify-content: center;
  align-items: center;
}

.menu ul {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0;
  margin: 0;
  list-style-type: none;
}

.menu li {
  margin-right: 1.4rem;
}

.contact-button {
  display: inline-block;
  margin-left: 20px;
  padding: 1px 15px;
  background-color: var(--highlight-color1);
  color: #eceef1;
  text-align: center;
  text-decoration: none;
  font-size: 1rem;
  font-weight: 400;
  border-radius: 25px;
  transition: background-color 0.3s ease;
  cursor: pointer;
}

.contact-button:hover {
  transition: opacity 0.3s ease;
  opacity: 0.8;
  color: #eceef1;
}

.hero {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin-left: 5%;
  position: absolute;
  top: 15vh;
  width: 50%;
}

.blurb {
  margin-top: 2rem;
  display: flex;
  flex-direction: column;
  gap: 20px;
  color: #272728;
}

.blurb li {
  display: flex;
  align-items: flex-start;
  margin: 0;
  font-size: 1.4rem;
  font-weight: 400;
}

.blurb li img {
  margin-right: 10px;
}

.blurb img {
  width: 30px;
  height: 30px;
}

.hero h1 {
  margin: 0;
  font-size: 4rem;
  line-height: 5rem;
  font-weight: 700;
}

.hero p {
  margin-left: 2px;
  background-color: #eceef1;
  border-radius: 3px;
  padding: 1rem;
  font-weight: 400;
}

.lede {
  margin-top: 4rem;
  display: flex;
  align-items: center;
}

.lede img {
  width: 200x;
  height: 200px;
  object-fit: cover;
  border-radius: 150px;
  margin-right: 2rem;
}

.lede p {
  border-left: 2px solid var(--primary-color);
  margin: 0;
  width: 80%;
  color: #272728;
  font-weight: 400;
}

/* 1476 */
@media (max-width: 1476px) {
  .hero {
    width: 58%;
  }
}

.hero h1 {
  font-size: 3.8;
  line-height: 4rem;
  width: 80%;
}

.lede p {
  background-color: #eceef1;
  border-left: none;
}

/* 1240 */
@media (max-width: 1274px) {
  .hero {
    width: 75%;
  }

  .hero h1 {
    font-size: 3.8;
    line-height: 4rem;
    width: 80%;
  }

  .lede {
    width: 80%;
  }

  .lede img {
    width: 160x;
    height: 160px;
    object-fit: cover;
    display: flex;
    align-items: center;
    border-radius: 150px;
    margin-right: 2rem;
  }

  .hero p {
    font-size: 0.9rem;
    padding: 1rem;
  }
}

/* Laptop (1095px) */
@media (max-width: 1095px) {
  .hero {
    width: 75%;
  }

  .hero h1 {
    width: 80%;
  }

  .hero p {
    font-size: 0.9rem;
    padding: 0.5rem;
    width: 100%;
  }
}

/* Laptop (962px) */
@media (max-width: 982px) {
  .hero {
    width: 90%;
    top: 5vh;
  }

  .hero h1 {
    width: 80%;
    font-size: 3.4;
    line-height: 4rem;
    width: 95%;
  }
}

/* Tablet (805px) */
@media (max-width: 805px) {
  .sidebar-toggle {
    display: block;
  }

  .navbar {
    display: none;
  }

  body {
    margin-left: 0;
    padding: 0;
  }

  .hero {
    position: absolute;
    transform: none;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: auto;
    padding-left: 0;
    margin-left: 0;
  }

  .hero h1 {
    text-align: center;
    font-size: 3rem;
    line-height: 3.5rem;
    width: 80%;
    margin-top: 1rem;
    padding-left: 0;
  }

  .blurb {
    margin-top: 2rem;
    gap: 5px;
    display: flex;
    justify-content: center;
  }

  .blurb ul {
    text-align: center;
    margin: 0;
    padding: 0;
    gap: 0;
  }
  .blurb li {
    font-size: 1.3rem;
  }

  .lede {
    display: flex;
    flex-direction: column;
    text-align: left;
    justify-content: center;
    align-items: center;
    margin-top: 2rem;
    margin-bottom: 1rem;
    font-size: 0.9rem;
    width: 100%;
  }

  .lede img {
    height: 250px;
    width: 250px;
  }

  .hero p {
    margin-top: 2rem;
    border-radius: 10px;
    font-size: 1rem;
    width: 80%;
  }
}

/* Mobile*/
@media (max-width: 620px) {
  .sidebar-toggle {
    display: block;
  }

  .hero h1 {
    font-size: 2.5rem;
    line-height: 3rem;
    width: 80%;
  }

  .blurb {
    gap: 5px;
  }

  .blurb li {
    font-size: 1.1rem;
    margin-bottom: 0;
  }

  .blurb li {
    font-size: 1rem;
    line-height: 1.3rem;
    margin-bottom: 0;
  }

  .lede {
    margin-top: 2rem;
  }

  .hero p {
    margin-top: 2rem;
    font-size: 0.9rem;
  }
}

/* Small mobile*/
@media (max-width: 464px) {
  .hero h1 {
    font-size: 2rem;
    line-height: 2.5rem;
  }

  .blurb {
    gap: 10px;
  }

  .blurb li {
    font-size: 0.9rem;
  }

  .lede p {
    font-size: 0.9rem;
    margin-bottom: 0;
  }
}

